contrast issue fixed

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -306,7 +306,7 @@ form label.sbs {
 
 #joinButton {
     border: none;
-    background-color: var(--highlight-color);
+    background-color: var(--header-color);
     color: var(--highlight-text-color);
     font-weight: bold;
     border-radius: .3rem;
